# aoc24

./: .gitignore  README.md
common/: CMakeLists.txt  build.sh
day01/: day01.cpp
day02/: day02.cpp
day03/: day03.cpp
day04/: day04.cpp
day05/: day05.cpp
day06/: day06.cpp
day07/: day07.cpp
day08/: day08.cpp
day09/: day09.cpp
day10/: day10.cpp
day11/: build.sh  day11.cpp
day12/: day12.cpp
day13/: day13.cpp
day14/: day14.cpp
day15/: day15.cpp
day16/: a.out  day16.cpp
day17/: day17.cpp
day18/: day18.cpp
day19/: day19.cpp
day20/: day20.cpp
day21/: day21.cpp
day22/: day22.cpp
day23/: day23.cpp
day24/: day24.cpp
day25/: day25.cpp
